--- a/birthday.html
+++ b/birthday.html
@@ -18,10 +18,10 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/hbd.mp3">
-    </source>
-    Your browser isn't invited for super fun audio time.
-  </audio>
+  <source src="./music/hbd.mp3">
+  </source>
+  Browser Anda tidak mendukung audio ini.
+</audio>
 
   <div class="container">
 
