--- a/birthday.html
+++ b/birthday.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 
 <head>
   <meta charset="UTF-8">
@@ -165,4 +165,5 @@
 <!-- Main JS -->
 <script type="application/javascript" src="./scripts/birthday.js"></script>
 
+  <script src="./scripts/birthday.js?v=2"></script>
 </html>
