--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,6 +27,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
   <!-- SweetAlery -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  
   <!-- Main JS -->
   <script type="application/javascript" src="./scripts/index.js"></script>
+
+
+  <script src="./scripts/birthday.js?v=2"></script>
+
 </html>
