--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="password" id="password" placeholder="Password" />
         <button type="submit" id="loginBtn">Login</button>
       </form>
-      <p class="login_description">pssstttt, usernamenya isi "nama" dan passwordnya sama dengan usernamenya ya</p>
+      <p class="login_description">cek cek soud , usernamenya isi "nama" dan passwordnya sama dengan usernamenya ya</p>
     </div>
   </body>
   <!-- GSAP -->
