--- a/birthday.html
+++ b/birthday.html
@@ -150,6 +150,8 @@
     </div>
 
     <div class="nine">
+ <img src="path/to/your/image.jpg" alt="Foto Profil" class="login_image">
+      
       <p>Oke, sekarang kembali lagi dan beri tahu saya apakah Anda menyukainya.</p>
       <p id="replay">
         Atau Anda dapat mengeklik di sini jika ingin melihatnya lagi.
