--- a/birthday.html
+++ b/birthday.html
@@ -150,7 +150,7 @@
     </div>
 
     <div class="nine">
- <img src="path/to/your/image.jpg" alt="Foto Profil" class="login_image">
+ <img src="../img/intan.jpeg" alt="Foto Profil" class="login_image">
       
       <p>Oke, sekarang kembali lagi dan beri tahu saya apakah Anda menyukainya.</p>
       <p id="replay">
