--- a/birthday.html
+++ b/birthday.html
@@ -22,7 +22,7 @@
   </source>
   Browser Anda tidak mendukung audio ini.
 </audio>
-<img src="img/intan.jpeg" alt="Foto Profil" class="login_image">
+<!-- <img src="img/intan.jpeg" alt="Foto Profil" class="login_image"> -->
   <div class="container">
 
     <div class="one">
