--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <body>
     <div class="login_container">
+      <img src="img/intan.jpeg" alt="Foto Profil" class="login_image">
       <h2>Hi👋🏼 Intan Nuraini login dulu yuk</h2>
       <form id="loginForm" class="login_form">
         <input type="text" id="username" placeholder="Username" />
