--- a/birthday.html
+++ b/birthday.html
@@ -151,7 +151,7 @@
 
     <div class="nine">
  
-      
+       <img src="img/intan.jpeg" alt="Foto Profil" class="nine">
       <p>Oke, sekarang kembali lagi dan beri tahu saya apakah Anda menyukainya.</p>
       <p id="replay">
         Atau Anda dapat mengeklik di sini jika ingin melihatnya lagi.
